--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -89,7 +89,9 @@ jobs:
         with:
           terragrunt_version: 0.37.1
       - name: Setup AWSweeper
-        run: curl -sSfL https://raw.githubusercontent.com/jckuester/awsweeper/master/install.sh | sh -s v0.12.0
+        run: |
+          curl -sSfL https://raw.githubusercontent.com/jckuester/awsweeper/master/install.sh | sh -s v0.12.0
+          mv ./bin/awsweeper /usr/local/bin/awsweeper
       - name: Setup Cloud-Nuke
         run: |
           curl -L https://github.com/gruntwork-io/cloud-nuke/releases/download/v0.16.2/cloud-nuke_linux_amd64 > /usr/local/bin/cloud-nuke
