lets run some tests
Signed-off-by: David Della Vecchia <ddv@dozuki.com>

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -5,6 +5,7 @@ on:
     branches:
     - main
     - terratest-github
+    - aws-provider-upgrade
 
 concurrency: test-suite
 jobs:
@@ -63,6 +64,7 @@ jobs:
 
   get_test_list:
     runs-on: ubuntu-latest
+    name: "List test cases for dynamic matrix"
     needs: static
     steps:
       - uses: actions/checkout@v2
