add the ability to target a replicated channel for initial app installation
Signed-off-by: David Della Vecchia <ddv@dozuki.com>

--- a/cloudprem/logical/static/replicated_config.json
+++ b/cloudprem/logical/static/replicated_config.json
@@ -1,6 +1,7 @@
 {
   "DaemonAuthenticationType": "password",
   "ReleaseSequence": ${release_sequence},
+  "LicenseBootstrapChannelID": "${replicated_channel}",
   "LicenseFileLocation": "/tmp/license.rli",
   "DaemonAuthenticationPassword": "${dashboard_password}",
   "TlsBootstrapType": "self-signed",
