Add ability to use replicated SSL cert to unify app and grafana SSL configuration
Signed-off-by: David Della Vecchia <ddv@dozuki.com>

--- a/cloudprem/logical/static/grafana_values.yml
+++ b/cloudprem/logical/static/grafana_values.yml
@@ -20,7 +20,7 @@ service:
 extraSecretMounts:
   - name: ssl-files
     mountPath: /etc/secrets
-    secretName: grafana-ssl
+    secretName: ${ssl_secret_name}
     readOnly: true
 
 readinessProbe:
