Update cluster-autoscaler helm chart to 9.21.0
Signed-off-by: David Della Vecchia <ddv@dozuki.com>

--- a/cloudprem/logical/static/cluster-autoscaler-values.yaml
+++ b/cloudprem/logical/static/cluster-autoscaler-values.yaml
@@ -8,4 +8,6 @@ rbac:
       eks.amazonaws.com/role-arn: "arn:${partition}:iam::${account_id}:role/${role_name}"
 
 autoDiscovery:
-  enabled: true
+  tags:
+    - k8s.io/cluster-autoscaler/enabled
+    - k8s.io/cluster-autoscaler/${cluster_name}
