--- a/cloudprem/logical/charts/cluster-autoscaler/Chart.yaml
+++ b/cloudprem/logical/charts/cluster-autoscaler/Chart.yaml
@@ -1,19 +1,14 @@
 apiVersion: v2
-appVersion: 1.21.0
+appVersion: 1.23.0
 description: Scales Kubernetes worker nodes within autoscaling groups.
+engine: gotpl
 home: https://github.com/kubernetes/autoscaler
 icon: https://github.com/kubernetes/kubernetes/raw/master/logo/logo.png
 maintainers:
-- email: e.bailey@sportradar.com
-  name: yurrriq
-- email: mgoodness@gmail.com
-  name: mgoodness
-- email: guyjtempleton@googlemail.com
-  name: gjtempleton
-- email: scott.crooks@gmail.com
-  name: sc250024
+  - email: guyjtempleton@googlemail.com
+    name: gjtempleton
 name: cluster-autoscaler
 sources:
-- https://github.com/kubernetes/autoscaler/tree/master/cluster-autoscaler
+  - https://github.com/kubernetes/autoscaler/tree/master/cluster-autoscaler
 type: application
-version: 9.10.7
+version: 9.21.0
