--- a/cloudprem/logical/charts/kubed/Chart.yaml
+++ b/cloudprem/logical/charts/kubed/Chart.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
-appVersion: v0.12.0
-description: Kubed by AppsCode - Kubernetes daemon
-home: https://github.com/appscode/kubed
+description: 'Config Syncer by AppsCode - Kubernetes daemon'
+name: config-syncer
+version: v0.14.0-rc.0
+appVersion: v0.14.0-rc.0
+home: https://github.com/kubeops/config-syncer
 icon: https://cdn.appscode.com/images/products/kubed/icons/android-icon-192x192.png
-maintainers:
-- email: support@appscode.com
-  name: appscode
-name: kubed
 sources:
-- https://github.com/appscode/kubed
-version: v0.12.0
+  - https://github.com/kubeops/config-syncer
+maintainers:
+  - name: appscode
+    email: support@appscode.com
