--- a/cloudprem/logical/charts/kubed/values.yaml
+++ b/cloudprem/logical/charts/kubed/values.yaml
@@ -1,4 +1,4 @@
-# Default values for kubed.
+# Default values for config-syncer.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
@@ -7,16 +7,16 @@ nameOverride: ""
 # Overrides fullname template
 fullnameOverride: ""
 
-# Number of Kubed operator replicas to create (only 1 is supported)
+# Number of Config Syncer operator replicas to create (only 1 is supported)
 replicaCount: 1
 
 operator:
-  # Docker registry used to pull Kubed operator image
-  registry: appscode
-  # Kubed operator container image
-  repository: kubed
-  # Kubed operator container image tag
-  tag: v0.12.0
+  # Docker registry used to pull Config Syncer operator image
+  registry: ghcr.io/appscode
+  # Config Syncer operator container image
+  repository: config-syncer
+  # Config Syncer operator container image tag
+  tag: ""
   # Compute Resources required by the operator container
   resources: {}
   # Security options the operator container should run with
@@ -26,7 +26,7 @@ operator:
 # Secrets must be manually created in the namespace.
 #
 # Example:
-# helm template charts/kubed \
+# helm template charts/config-syncer \
 #   --set imagePullSecrets[0].name=sec0 \
 #   --set imagePullSecrets[1].name=sec1
 imagePullSecrets: []
@@ -34,7 +34,7 @@ imagePullSecrets: []
 # Container image pull policy
 imagePullPolicy: IfNotPresent
 
-# If true, installs Kubed operator as critical addon
+# If true, installs Config Syncer operator as critical addon
 criticalAddon: false
 
 # Log level for operator
@@ -70,7 +70,7 @@ serviceAccount:
   name: ""
 
 apiserver:
-  # Port used by Kubed server
+  # Port used by Config Syncer server
   securePort: "8443"
   # If true, uses kube-apiserver FQDN for AKS cluster to workaround https://github.com/Azure/AKS/issues/522 (default true)
   useKubeapiserverFqdnForAks: true
@@ -81,19 +81,16 @@ apiserver:
     # If true, generates on install/upgrade the certs that allow the kube-apiserver (and potentially ServiceMonitor)
     # to authenticate operators pods. Otherwise specify certs in `apiserver.servingCerts.{caCrt, serverCrt, serverKey}`.
     generate: true
-    # CA certficate used by serving certificate of Kubed server.
+    # CA certficate used by serving certificate of Config Syncer server.
     caCrt: ""
-    # Serving certficate used by Kubed server.
+    # Serving certficate used by Config Syncer server.
     serverCrt: ""
-    # Private key for the serving certificate used by Kubed server.
+    # Private key for the serving certificate used by Config Syncer server.
     serverKey: ""
-
-# If true, sends usage analytics
-enableAnalytics: true
 
 config:
   # Set cluster-name to something meaningful to you, say, prod, prod-us-east, qa, etc.
-  # so that you can distinguish notifications sent by kubed
+  # so that you can distinguish notifications sent by config-syncer
   clusterName: unicorn
   # If set, configmaps and secrets from only this namespace will be synced
   configSourceNamespace: ""
