--- a/terraform/physical/static/bastion_kubernetes_config.yaml
+++ b/terraform/physical/static/bastion_kubernetes_config.yaml
@@ -22,6 +22,18 @@ mainSteps:
       sourceInfo:
         url: "https://dl.k8s.io/release/v1.21.0/bin/linux/amd64/kubectl"
       destinationPath: "/usr/bin/kubectl"
+  - action: aws:runShellScript
+    name: installK9s
+    inputs:
+      runCommand:
+        - mkdir k9stemp
+        - cd k9stemp
+        - curl -LO https://github.com/derailed/k9s/releases/download/v0.27.3/k9s_Linux_amd64.tar.gz
+        - tar -xzf k9s_Linux_amd64.tar.gz
+        - sudo mv k9s /usr/local/bin/
+        - sudo chmod +x /usr/local/bin/k9s
+        - cd ..
+        - rm -rf k9stemp
   - action: aws:downloadContent
     name: downloadHelm
     inputs:
