upgrade bastion to al2023

--- a/terraform/physical/static/bastion_mysql_config.yaml
+++ b/terraform/physical/static/bastion_mysql_config.yaml
@@ -19,7 +19,7 @@ mainSteps:
     name: installDeps
     inputs:
       runCommand:
-        - sudo yum install -y jq mariadb
+        - sudo yum install -y jq mariadb105
   - action: aws:runShellScript
     name: configMySQL
     inputs:
