--- a/terraform/physical/static/bastion_kubernetes_config.yaml
+++ b/terraform/physical/static/bastion_kubernetes_config.yaml
@@ -68,6 +68,6 @@ mainSteps:
       runCommand:
         - chmod 755 /usr/bin/kubectl
         - chmod 755 /usr/bin/helm
-        - chmod 755 /usr/local/bin/k9s; chmod 755 /usr/bin/k9s
+        - chmod 755 /usr/bin/k9s
         - chown -R ssm-user:ssm-user /home/ssm-user/.kube
         - chmod -R 700 /home/ssm-user/.kube
