Refactor live environment generation to add account number customization since we are no longer using 1 test account

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ tfvars
 test_output*
 /live/gov/
 /live/standard/
+/live/.skel/partitions/standard/account.hcl
+/live/.skel/partitions/gov/account.hcl
