Add acm parameters to cleanup config

--- a/live/tests/awsweeper.yaml
+++ b/live/tests/awsweeper.yaml
@@ -121,3 +121,6 @@ aws_sqs_queue:
       Terraform: true
 aws_ssm_parameter:
   - id: (.*vpn.*)
+  - id: (.*acm.*)
+  - tags:
+      Terraform: true
