--- a/terraform/physical/static/dms_config.json
+++ b/terraform/physical/static/dms_config.json
@@ -7,7 +7,85 @@
     "LobMaxSize": 0
   },
   "Logging": {
-    "EnableLogging": true
+    "EnableLogging": true,
+    "LogComponents": [
+      {
+        "Severity": "LOGGER_SEVERITY_DEFAULT",
+        "Id": "TRANSFORMATION"
+      },
+      {
+        "Severity": "LOGGER_SEVERITY_DETAILED_DEBUG",
+        "Id": "SOURCE_UNLOAD"
+      },
+      {
+        "Severity": "LOGGER_SEVERITY_DETAILED_DEBUG",
+        "Id": "IO"
+      },
+      {
+        "Severity": "LOGGER_SEVERITY_DETAILED_DEBUG",
+        "Id": "TARGET_LOAD"
+      },
+      {
+        "Severity": "LOGGER_SEVERITY_DEFAULT",
+        "Id": "PERFORMANCE"
+      },
+      {
+        "Severity": "LOGGER_SEVERITY_DETAILED_DEBUG",
+        "Id": "SOURCE_CAPTURE"
+      },
+      {
+        "Severity": "LOGGER_SEVERITY_DETAILED_DEBUG",
+        "Id": "SORTER"
+      },
+      {
+        "Severity": "LOGGER_SEVERITY_DETAILED_DEBUG",
+        "Id": "REST_SERVER"
+      },
+      {
+        "Severity": "LOGGER_SEVERITY_DETAILED_DEBUG",
+        "Id": "VALIDATOR_EXT"
+      },
+      {
+        "Severity": "LOGGER_SEVERITY_DETAILED_DEBUG",
+        "Id": "TARGET_APPLY"
+      },
+      {
+        "Severity": "LOGGER_SEVERITY_DETAILED_DEBUG",
+        "Id": "TASK_MANAGER"
+      },
+      {
+        "Severity": "LOGGER_SEVERITY_DETAILED_DEBUG",
+        "Id": "TABLES_MANAGER"
+      },
+      {
+        "Severity": "LOGGER_SEVERITY_DETAILED_DEBUG",
+        "Id": "METADATA_MANAGER"
+      },
+      {
+        "Severity": "LOGGER_SEVERITY_DETAILED_DEBUG",
+        "Id": "FILE_FACTORY"
+      },
+      {
+        "Severity": "LOGGER_SEVERITY_DETAILED_DEBUG",
+        "Id": "COMMON"
+      },
+      {
+        "Severity": "LOGGER_SEVERITY_DETAILED_DEBUG",
+        "Id": "ADDONS"
+      },
+      {
+        "Severity": "LOGGER_SEVERITY_DETAILED_DEBUG",
+        "Id": "DATA_STRUCTURE"
+      },
+      {
+        "Severity": "LOGGER_SEVERITY_DETAILED_DEBUG",
+        "Id": "COMMUNICATION"
+      },
+      {
+        "Severity": "LOGGER_SEVERITY_DETAILED_DEBUG",
+        "Id": "FILE_TRANSFER"
+      }
+    ]
   },
   "ValidationSettings": {
     "EnableValidation": true,
