--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,13 +22,10 @@ jobs:
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
           body: |
-            App Ingress, LetsEncrypt certs, & Monitoring Overhaul
-            - We now use ingress for the admin dashboard, main app, and grafana (at /dashboards).
-            - All SSL certs are managed automatically via cert-manager and LetsEncrypt.
-            - New DNS subdomains auto-provisioning for dozuki.cloud.
-            - Grafana refactor to use MySQL for settings and user persistence.
-            - Slack & email notifications for monitoring alarms.
-            - New monitoring alarms for EKS.
-            - RDS Read Replica for BI now available and set as default over DMS.
+            RDS Monitoring & KOTS Support Changes
+            - Added monitoring alarms for RDS instances.
+            - Removed Grafana from logical module in favor of deploying via KOTS.
+            - Added new K8 RBAC to support the new Dozuki Operator deployed via KOTS.
+            - Refactored some naming conventions to prevent collisions.
           draft: false
           prerelease: false
