Refactor DMS mapping json to be more explicit regarding conditional replication

--- a/terraform/physical/static/dms_mapping.json
+++ b/terraform/physical/static/dms_mapping.json
@@ -3,9 +3,9 @@
     {
       "rule-type": "selection",
       "rule-id": "1",
-      "rule-name": "1",
+      "rule-name": "include-guide",
       "object-locator": {
-        "schema-name": "%",
+        "schema-name": "%_guide",
         "table-name": "%"
       },
       "rule-action": "include",
@@ -14,40 +14,7 @@
     {
       "rule-type": "selection",
       "rule-id": "2",
-      "rule-name": "2",
-      "object-locator": {
-        "schema-name": "mysql",
-        "table-name": "%"
-      },
-      "rule-action": "exclude",
-      "filters": []
-    },
-    {
-      "rule-type": "selection",
-      "rule-id": "3",
-      "rule-name": "3",
-      "object-locator": {
-        "schema-name": "performance_schema",
-        "table-name": "%"
-      },
-      "rule-action": "exclude",
-      "filters": []
-    },
-    {
-      "rule-type": "selection",
-      "rule-id": "4",
-      "rule-name": "4",
-      "object-locator": {
-        "schema-name": "frontegg_%",
-        "table-name": "%"
-      },
-      "rule-action": "exclude",
-      "filters": []
-    },
-    {
-      "rule-type": "selection",
-      "rule-id": "5",
-      "rule-name": "5",
+      "rule-name": "exclude-sessions",
       "object-locator": {
         "schema-name": "%",
         "table-name": "sessions"
@@ -57,11 +24,44 @@
     },
     {
       "rule-type": "selection",
-      "rule-id": "6",
-      "rule-name": "6",
+      "rule-id": "3",
+      "rule-name": "exclude-pwreset",
       "object-locator": {
         "schema-name": "%",
         "table-name": "user_password_reset"
+      },
+      "rule-action": "exclude",
+      "filters": []
+    },
+    {
+      "rule-type": "selection",
+      "rule-id": "4",
+      "rule-name": "exclude-wiki-url",
+      "object-locator": {
+        "schema-name": "%",
+        "table-name": "wiki_urls"
+      },
+      "rule-action": "exclude",
+      "filters": []
+    },
+    {
+      "rule-type": "selection",
+      "rule-id": "5",
+      "rule-name": "exclude-oid-nonce",
+      "object-locator": {
+        "schema-name": "%",
+        "table-name": "oid_nonces"
+      },
+      "rule-action": "exclude",
+      "filters": []
+    },
+    {
+      "rule-type": "selection",
+      "rule-id": "6",
+      "rule-name": "exclude-oid-assoc",
+      "object-locator": {
+        "schema-name": "%",
+        "table-name": "oid_associations"
       },
       "rule-action": "exclude",
       "filters": []
