--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,8 +6,8 @@ repos:
         args: ["markdown", "table", "--output-file", "README.md", "./terraform/physical"]
       - id: terraform-docs-go
         args: ["markdown", "table", "--output-file", "README.md", "./terraform/logical"]
-  - repo: git://github.com/antonbabenko/pre-commit-terraform
-    rev: "v1.62.2"
+  - repo: https://github.com/antonbabenko/pre-commit-terraform
+    rev: "v1.83.5"
     hooks:
       - id: terraform_fmt
       - id: terraform_tflint
