--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,11 +22,7 @@ jobs:
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
           body: |
-            Kubernetes Upgrade Transitional Release
-            - Version 1.22 of Kubernetes is being fully deprecated by AWS, this release facilitates upgrading.
-            - Bare minimum changes to support upgrading K8s from 1.22 to 1.27.
-            - Parameterizes K8s version in env.hcl.
-            - Installs ebs-csi-driver helm chart and required IAM policies.
-            - Deletes K8s resources that are no longer using valid api groups.
+            Unmanaged Private Cloud Support
+            - Add support for unmanaged private cloud customers by disabling required managed DNS provider.
           draft: false
           prerelease: false
